--- a/context-intro/src/App.css
+++ b/context-intro/src/App.css
@@ -1,10 +1,6 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
   text-align: center;
 }
-
 .app {
   display: flex;
   flex-direction: column;
@@ -12,4 +8,11 @@
 
 .main {
 display: flex;
+justify-content: space-evenly;
+}
+
+
+.card {
+  border: 1px solid black;
+  padding: 3rem;
 }
